# python-pytest-testing-project-79

./: Makefile  README.md  page_loader2.py  pyproject.toml
page_loader/: cli.py  loader.py  page.py
page_loader/scripts/: page_loader_script.py
tests/: conftest.py  test_loader.py  test_page_loader.py
tests/test_data/: after.html  before.html
