[project]
name = "hexlet-code"
version = "0.1.0"
description = "CLI utility to download web pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hatch>=1.14.1",
    "requests>=2.32.3",
]

[project.scripts]
page-loader = "page_loader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "requests-mock>=1.12.1",
]
